# Claide

./: .gitignore  ExportOptions.plist  README.md  appcast.xml  project.yml
.beads/: issues.jsonl
Claide/: AppDelegate.swift  BridgingHeader.h  ClaideApp.swift  ContentView.swift  EdgeVisuals.swift  FontSelection.swift  KanbanColumn.swift  MainSplitViewController.swift  MainWindowController.swift  NodeVisuals.swift  Palette.swift  Theme.swift
ClaideTests/: ClaudeTaskServiceTests.swift  EdgeVisualsTests.swift  FileChangeTests.swift  Fixtures.swift  FontSelectionTests.swift  ForceLayoutTests.swift  ForegroundProcessTests.swift  GlobalHotkeyTests.swift  HotkeyWindowControllerTests.swift  IssueDetailPopoverTests.swift  IssueParsingTests.swift  KanbanColumnTests.swift  MainWindowControllerTests.swift  NeighborTests.swift  NodeMetricsTests.swift  NodeVisualsTests.swift  PaletteTests.swift  PaneContainerViewTests.swift  PaneNodeTests.swift  PaneTreeControllerTests.swift  ResizableTerminalViewTests.swift  SessionStatusTests.swift  TerminalTabManagerTests.swift  TerminalThemeTests.swift  TerminalViewModelTests.swift  ThemePreviewTests.swift  TmuxKeyEncoderTests.swift  TmuxLayoutParserTests.swift  TmuxNativeSplitTests.swift  TmuxProtocolParserTests.swift  TmuxWindowLifecycleTests.swift
docs/: tmux-cc-test-plan.md  tmux-pane-plan.md
rust/: Cargo.toml  build-universal.sh
rust/claide-terminal/: Cargo.toml
rust/claide-terminal/include/: claide_terminal.h
rust/claide-terminal/src/: ffi.rs  grid_snapshot.rs  handle.rs  lib.rs  listener.rs  pty_reader.rs
scripts/: release.sh
(+89 files in other folders)
